Reporter to ReportNode in java part
Signed-off-by: Coline PILOQUET <coline.piloquet@rte-france.com>